# suprachat-bot

./: .drone.yml  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  schema.sql
ci/: main.py
sc_admin_bot/: __init__.py  sc_admin.py  strings.py
sc_admin_bot/commands/: badnicks.py  badwords.py  bot_join.py  invite.py  rules.py
sc_admin_bot/utils/: func.py
suprabot/: __init__.py  strings.py  suprabot.py
suprabot/commands/: badnicks.py  badwords.py  bot_join.py  invite.py  rules.py
suprabot/tests/: test_suprabot.py
suprabot/utils/: func.py
tests/: test_sc_admin_bot.py
