[tool.poetry]
name = "sc_admin_bot"
version = "0.1.0"
description = ""
authors = ["Pedro Ivan Partida Galarza <ivan.97galarz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sopel = "^7.1.6"
PyPika = "^0.48.8"
mariadb = "^1.0.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
