[tool.poetry]
name = "suprabot"
version = "0.1.0"
description = ""
authors = ["Pedro Ivan Partida Galarza <ivan.97galarz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
sopel = "^7.1.6"
mariadb = "^1.0.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
black = "^23.3.0"
ruff = "^0.0.270"
dagger-io = "^0.6.1"
kubernetes = "^26.1.0"
pyright = "^1.1.314"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."sopel.plugins"]
"sc_admin" = "suprabot:suprabot"

[tool.pyright]
venvPath = "."
venv = ".venv"
